--- a/TODO
+++ b/TODO
@@ -2,3 +2,4 @@ daemon
 ------
 * FileMetadataConstants should be renamed, at least
 * i'm not fetching release date from id3, am i? check this shit later
+* database isn't up to date. "loaded" in album/artist/track must go, and file should have reference to metatrack, not track. probably lots more, and so on
