--- a/TODO
+++ b/TODO
@@ -1,4 +1,8 @@
 daemon
 ------
-* FileMetadataConstants should be renamed, at least
 * locutus crash if eg. track with tracknumber 1 is removed from the track table and that album got more than 1 tracks. should do something clever here (order by tracknumber desc and seeing if first tracknumber equals rows?)
+
+missing features:
+1. saving
+2. generate puids
+3. "genre" by fetching from audioscrobbler
