added code to update file table when saving a file

--- a/daemon/TODO
+++ b/daemon/TODO
@@ -5,6 +5,7 @@ bugs:
 
 missing features:
 -----------------
+* add "id" to track, album, artist, metafile, ...
 * moving files
 * "genre" by fetching from audioscrobbler
 * generate puids (libofa)
