just added "(chronological order)" to list of contributors

--- a/README
+++ b/README
@@ -13,7 +13,7 @@ Usage
 TODO
 
 
-Killer coding ninja monkeys
-===========================
+Killer coding ninja monkeys (chronological order)
+=================================================
 Vidar Wahlberg, <canidae@exent.net>
   Daemon, database, web interface
