added LICENSE and updated README

--- a/README
+++ b/README
@@ -1,8 +1,3 @@
-Licence
-=======
-GPLv2 and GPLv3.
-
-
 Installation
 ============
 TODO
@@ -13,7 +8,7 @@ Usage
 TODO
 
 
-Killer coding ninja monkeys (chronological order)
-=================================================
+Killer coding ninja monkeys (in order of appearance)
+====================================================
 Vidar Wahlberg, <canidae@exent.net>
   Daemon, database, web interface
